--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -18,3 +18,4 @@ jobs:
         uses: greatwizard/coverage-diff-action@v1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          allowed-to-fail: true
